tests/bad/static_typing5.lt
void f(string a, int b) {
    print(a);
    print(b);
}
void main(){
    f(1, 2);
}